Add tooling aliases and lint/test CI workflows
Aliases follow the conventions in the dapr project: :outdated (antq),
:cljfmt, :clj-kondo. Test roots and src/cljs are added to the lint and format
classpaths since neither is on the default :paths -- cljs is compiled by
shadow, not the JVM.

clj-kondo found two unused bindings in http/routes.clj; fixed by not
destructuring deps the scaffold handler does not read yet. cljfmt reformatted
main.clj. Both now pass clean.

CI: .forgejo/workflows/lint.yml runs clj-kondo and cljfmt on one runner, since
neither is platform-dependent. test.yml runs unit and integration on Linux and
Windows with the matching natives alias, plus a Linux-only build job that
assembles the uberjar and smoke-tests /healthz and the CLJS bundle.

Spec correction: §9 specified Java 21, but the run and test aliases pass
--sun-misc-unsafe-memory-access, which does not exist before JDK 23 and makes
an older JVM refuse to start. CI now pins 25 to match development.

LWJGL deliberately stays at 3.3.6 though antq reports 3.4.2 -- 3.3.6 is the
version spike #6 verified end to end, and the natives are the last thing to
bump untested.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01L4V1KDzu2YpG98iPP6cXbB